@@ -2,6 +2,8 @@ Nutch Change Log
 
 Unreleased Changes
 
+* NUTCH-775 Enhance searcher interface (siren)
+
 * NUTCH-781 Update Tika to v0.6 (jnioche)
 
 * NUTCH-269 CrawlDbReducer: OOME because no upper-bound on inlinks count (stack + jnioche)
